nexus/fm-build/tests/output/requires_not_null.txt
  × invalid schema

Error: 
  × expected `case_id` column to be `NOT NULL`, but it wasn't
   ╭─[fm_schema.sql:4:60]
 3 │             CREATE TABLE example (
 4 │                 id UUID NOT NULL, sitrep_id UUID NOT NULL, case_id UUID,
   ·                                                            ───┬───
   ·                                                               ╰── this column
 5 │                 created_sitrep_id UUID NOT NULL,
   ╰────
  help: 'example' is not a valid fm_fact table
